# hypervisor

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT_PLAN.md  Makefile  Makefile.bak  PROGRESS.md  README.md  REQUIREMENTS.md  ROADMAP.md  TECH_OPT.md  aarch64-unknown-none.json  build.rs  guest_mmio.S  virt.dtb
.cargo/: config.toml
docs/: GICV3_IMPLEMENTATION.md  SETUP.md  SPRINT_1.6_SUMMARY.md  architecture-zh.md  architecture.md  building-guest-kernel.md  debugging.md
guest/: hypervisor_guest_hvc.conf  hypervisor_guest_hvc.overlay
scripts/: build-bl32-bl33.sh  build-qemu.sh  build-tfa.sh  check_env.sh  install_deps.sh
src/: dtb.rs  global.rs  guest_loader.rs  lib.rs  main.rs  manifest.rs  percpu.rs  platform.rs  scheduler.rs  secure_stage2.rs  sp_context.rs  spmc_handler.rs  sync.rs  test_guest.rs  test_guest_irq.rs  test_mmio.rs  test_timer.rs  uart.rs  vcpu.rs  vcpu_interrupt.rs  vm.rs  vswitch.rs
tests/: build_guest.sh  guest_test.S  mod.rs  test_allocator.rs  test_complete_interrupt.rs  test_decode.rs  test_device_routing.rs  test_dtb.rs  test_dynamic_pagetable.rs  test_ffa.rs  test_gicd.rs  test_gicr.rs  test_gicv3_virt.rs  test_global.rs  test_guest.rs  test_guest_interrupt.rs  test_guest_irq.rs  test_guest_loader.rs  test_heap.rs  test_mmio.rs  test_multi_vcpu.rs  test_multi_vm_devices.rs  test_net_rx_ring.rs  test_page_ownership.rs  test_pl031.rs  test_scheduler.rs  test_secure_stage2.rs  test_simple_guest.rs  test_sp_context.rs  test_spmc_handler.rs  test_timer.rs  test_virtio_net.rs  test_vm_activate.rs  test_vm_scheduler.rs  (+3 more)
(+115 files in other folders)
