[package]
name = "hypervisor"
version = "0.1.0"
authors = ["Willam Hou <willamhou@example.com>"]
edition = "2021"

[lib]
name = "hypervisor"
path = "src/lib.rs"

[[bin]]
name = "hypervisor"
path = "src/main.rs"

[dependencies]
# 裸机开发，暂无依赖

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = "z"  # 优化大小
