[package]
name = "hypervisor"
version = "0.1.0"
authors = ["Willam Hou <willamhou@example.com>"]
edition = "2021"

[lib]
name = "hypervisor"
path = "src/lib.rs"

[[bin]]
name = "hypervisor"
path = "src/main.rs"

[dependencies]
fdt = "0.1.5"

[profile.dev]
panic = "abort"
lto = false  # Disable LTO to prevent code elimination

[features]
default = []
guest = []
linux_guest = []
multi_pcpu = ["linux_guest"]
multi_vm = ["linux_guest"]

[profile.release]
panic = "abort"
lto = true
opt-level = "z"  # 优化大小
